TT-17123, trial v3
